[package]
name = "dbus_explorer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dbus = { version="0.9", features=["vendored"]}
anyhow = "1.0"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.36", features = ["serialize"] }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
urlencoding = "2.1"
log = "0.4"
acap-logging = "0.1"
thiserror = "1.0"
